style/desktop/style.css
body {
	font-family: 'Open Sans';
}

h1 {
	font-size: 40px;
	text-align: center;
	margin: 10px 0px 5px 0px;
	padding-top: 0px;
	padding: 5px;
	background-color: #c1ebb0;
	border-bottom-style: solid;
	border-bottom-color: black;
	border-bottom-width: 1px;
	font-family: 'Alfa Slab One';
}


.about p {
	font-family: sans-serif;
	max-width: 70%;
	margin: auto;
	line-height: 20px;
}

.content h3 {
	font-family: 'Alfa Slab One';
	color: white;
	padding: 7px 0px 7px 0px;
	margin: auto;
}

h2, .about h3 {
	max-width: 70%;
	margin: auto;
	padding: 20px 0px 10px 0px;
	color: darkseagreen;
	font-size: 130%;
	font-family: 'Alfa Slab One';
}


.header {
	padding: 5px;
	margin: auto;
	background-color: darkseagreen;
}

.image {
	width: 45%;
	height: auto;
	display: block;
	margin: auto;

}

#leftmenu {
	float: left;
	background-color: #c1ebb0;
	padding: 2%;
	border-radius: 10px;
	max-width: 18%;
	height: auto;
	overflow-y: hidden;
}

#rightmenu {
	float: right;
	position: absolute;
	top: 30%;
	right: 0;
	padding: 10px;
	width: 190px;
}



.button {
	font-family: 'Alfa Slab One';
	color: black;
	text-align: center;
	border-radius: 10px;
	border-width: 1.5px;
	border-style: solid;
	padding: 10px 5px;
	border-color: white;
	margin: 10px 0;
	background-color: #c1ebb0;

}
.overlay {
	height: 100%;
	width: 0;
	position: fixed;
	z-index: 100;
	top: 0;
	left: 0;
	background-color: rgba(0,0,0, 0.9);
	overflow-x: hidden;
	transition: 0.5s;
}
.overlay-content {
	position: relative;
	width: 75%;
	text-align: left;;
	margin-top: 10%;
	margin-left: 10%;
}

.overlay-content h1, .overlay-content h2 {
	font-size: 15px;
	text-align: left;
	color: white;
	background-color: transparent;
	margin: 0;
	padding-left: 0;
	font-family: sans-serif;

}
.overlay .closebtn {
	position: absolute;
	top: 20px;
	right: 45px;
	font-size: 60px;
}

iframe {
	background-color: white;
	margin: 0 auto;
	height: 450px;
	width: 80vw;
}


#map {
	height: 90vh;
	width: auto;
	margin-left: 200px;
	margin-right: 200px;
	border-color: slategrey;
	border-radius: 10px;

}

#vismenu {
	float: left;
	width: 200px;
}

/*#choosedates {*/
/*    padding: 10px;*/
}

#authorize-button {
	padding: 2%;
	margin: 10px 10px 10px 0px;
}

#authorize-button:hover, #signout-button:hover, #get-events:hover {
	background-color: green;
	color: white;
}

#signout-button {
	margin: 10px 10px 10px 0px;
}

#date1, #date2, #date, #get-events {
	margin: 10px 10px 10px 0px;
}

#nav ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	background-color: #333;
	position: relative;
	width: 100%;
	display: inline-block;
	text-align:center;
	font-family: 'Alfa Slab One';
}

#nav li {
/*    float: left;*/
	display: inline-block;
	text-align: center;
}

#nav li a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}

#nav a:hover {
	background-color: black;
}

#nav a:active {
	color: darkseagreen;
}

h2 {
	text-align: center;
	margin: auto;
	font-size: 150%;
}

.teamcontainer {
	display: flex;
	flex-wrap: wrap;
}

* {
	box-sizing: border-box;
}

.main {
	max-width: 1000px;
	margin: auto;
}

h1 {
	font-size: 50px;
	word-break: break-all;
}

.row {
	margin: 8px -16px;
	display: flex;
	flex-wrap: wrap;
}

/* Add padding BETWEEN each column */
.row,
.row > .column {
	padding: 3px;
}

/* Create three equal columns that floats next to each other */
.column {
	float: left;
	width: 33.3%;
}

/* Clear floats after rows */
.row:after {
	content: "";
	display: table;
	clear: both;
}

/* Content */
.content {
	background-color: lightgray;
	padding: 10px;
}

/* Responsive layout - just so that heatmap buttons stay correctly */
@media screen and (max-width: 1200px) {


	#rightmenu {
		top: 27%;

	}

}

/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width: 900px) {
	.column {
		width: 50%;
	}
	#rightmenu {
		top: 22%
	}
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
	.column {
		width: 100%;
	}

	#rightmenu {
		top: 18%
	}

}

